--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
           Hi, I’m <span class="name-highlight">Hanvitha</span>
         </h1>
 
-        <p class="hero-role">Full Stack Developer</p>
+        <p class="hero-role">Frontend Developer</p>
 
         <p class="hero-bio">
           I specialize in building scalable, maintainable, and high-performance
@@ -360,7 +360,7 @@
     <!-- BRAND -->
     <div class="footer-brand">
       <h2 class="brand-name">Hanvitha Pesarikayala</h2>
-      <p class="brand-tag">Full Stack Developer</p>
+      <p class="brand-tag">Frontend Developer</p>
       <p class="brand-desc">
         Building scalable, modern web applications with clean UI and reliable backend systems.
       </p>
@@ -418,9 +418,9 @@
     <div class="footer-section">
       <h3>Services</h3>
       <ul>
-        <li><a href="#">Full Stack Web Development</a></li>
+        <li><a href="#">Frontend Web Development</a></li>
         <li><a href="#">Frontend Engineering</a></li>
-        <li><a href="#">Backend API Development</a></li>
+        <li><a href="#">AI Integration</a></li>
         <li><a href="#">UI / UX Implementation</a></li>
         <li><a href="#">Performance Optimization</a></li>
       </ul>
@@ -432,9 +432,9 @@
       <ul>
         <li><a href="#">HTML • CSS • JavaScript</a></li>
         <li><a href="#">React.js</a></li>
-        <li><a href="#">Node.js</a></li>
-        <li><a href="#">MongoDB</a></li>
-        <li><a href="#">Three.js</a></li>
+        <li><a href="#">Tailwind</a></li>
+        <li><a href="#">SQL</a></li>
+        <li><a href="#">GitHub</a></li>
       </ul>
     </div>
 
