--- a/contact.html
+++ b/contact.html
@@ -196,7 +196,7 @@
     <!-- BRAND -->
     <div class="footer-brand">
       <h2 class="brand-name">Hanvitha Pesarikayala</h2>
-      <p class="brand-tag">Full Stack Developer</p>
+      <p class="brand-tag">Frontend Developer</p>
       <p class="brand-desc">
         Building scalable, modern web applications with clean UI and reliable backend systems.
       </p>
@@ -254,9 +254,9 @@
     <div class="footer-section">
       <h3>Services</h3>
       <ul>
-        <li><a href="#">Full Stack Web Development</a></li>
+        <li><a href="#">Frontend Web Development</a></li>
         <li><a href="#">Frontend Engineering</a></li>
-        <li><a href="#">Backend API Development</a></li>
+        <li><a href="#">AI Integration</a></li>
         <li><a href="#">UI / UX Implementation</a></li>
         <li><a href="#">Performance Optimization</a></li>
       </ul>
@@ -268,9 +268,9 @@
       <ul>
         <li><a href="#">HTML • CSS • JavaScript</a></li>
         <li><a href="#">React.js</a></li>
-        <li><a href="#">Node.js</a></li>
-        <li><a href="#">MongoDB</a></li>
-        <li><a href="#">Three.js</a></li>
+        <li><a href="#">Tailwind</a></li>
+        <li><a href="#">SQL</a></li>
+        <li><a href="#">GitHub</a></li>
       </ul>
     </div>
 
@@ -303,8 +303,6 @@
   </div>
 
 </footer>
-
-
 <!-- NAVBAR JS FIRST -->
 <script src="nav.js" defer></script>
 
