--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       I build <span class="typing"></span>
     </p>
     <p class="hero-desc">
-      Passionate Full Stack Developer crafting modern, scalable, and visually
+      Passionate Frontend Developer crafting modern, scalable, and visually
       striking web experiences using cutting-edge technologies.
     </p>
     <div class="hero-actions">
@@ -72,9 +72,9 @@
   <h2 class="title">
     <span>Technologies</span>
   </h2>
-  <p class="section-subtitle">
+    <p class="section-subtitle">
     Industry-standard tools and technologies I work with daily.
-  </p>
+    </p>
   <div class="tech-grid">
     <!-- Frontend -->
     <div class="tech-card fade-up">
@@ -83,58 +83,58 @@
         <div class="tech-item html"><i class="fa-brands fa-html5"></i><span>HTML5</span></div>
         <div class="tech-item css"><i class="fa-brands fa-css3-alt"></i><span>CSS3</span></div>
         <div class="tech-item js"><i class="fa-brands fa-js"></i><span>JavaScript</span></div>
+        <div class="tech-item responsive"><i class="fa-solid fa-mobile-screen-button"></i><span>Responsive Design</span></div>
+      </div>
+    </div>
+
+    <!-- Frameworks -->
+    <div class="tech-card fade-up delay-1">
+      <h3>Frameworks</h3>
+      <div class="tech-icons">
         <div class="tech-item react"><i class="fa-brands fa-react"></i><span>React</span></div>
         <div class="tech-item bootstrap"><i class="fa-brands fa-bootstrap"></i><span>Bootstrap</span></div>
         <div class="tech-item sass"><i class="fa-brands fa-sass"></i><span>SASS</span></div>
-        <div class="tech-item responsive"><i class="fa-solid fa-mobile-screen"></i><span>Responsive Design</span></div>
-        <div class="tech-item ux"><i class="fa-solid fa-pen-nib"></i><span>UI / UX</span></div>
+        <div class="tech-item tailwind"><i class="fa-brands fa-tailwind"></i><span>Tailwind CSS</span></div>
       </div>
     </div>
-    <!-- Backend -->
-    <div class="tech-card fade-up delay-1">
-      <h3>Backend</h3>
-      <div class="tech-icons">
-        <div class="tech-item node"><i class="fa-brands fa-node-js"></i><span>Node.js</span></div>
-        <div class="tech-item express"><i class="fa-solid fa-server"></i><span>Express</span></div>
-        <div class="tech-item java"><i class="fa-brands fa-java"></i><span>Java</span></div>
-        <div class="tech-item spring"><i class="fa-solid fa-leaf"></i><span>Spring Boot</span></div>
-        <div class="tech-item api"><i class="fa-solid fa-code"></i><span>REST APIs</span></div>
-        <div class="tech-item jwt"><i class="fa-solid fa-shield-halved"></i><span>JWT</span></div>
-      </div>
-    </div>
+
     <!-- Database -->
     <div class="tech-card fade-up delay-2">
       <h3>Database</h3>
       <div class="tech-icons">
         <div class="tech-item mysql"><i class="fa-solid fa-database"></i><span>MySQL</span></div>
-        <div class="tech-item mongo"><i class="fa-solid fa-leaf"></i><span>MongoDB</span></div>
         <div class="tech-item db"><i class="fa-solid fa-project-diagram"></i><span>DB Design</span></div>
         <div class="tech-item crud"><i class="fa-solid fa-arrows-rotate"></i><span>CRUD</span></div>
       </div>
     </div>
-    <!-- Tools -->
+
+    <!-- Tools & Platforms -->
     <div class="tech-card fade-up delay-3">
       <h3>Tools & Platforms</h3>
       <div class="tech-icons">
         <div class="tech-item git"><i class="fa-brands fa-git-alt"></i><span>Git</span></div>
         <div class="tech-item github"><i class="fa-brands fa-github"></i><span>GitHub</span></div>
-        <div class="tech-item docker"><i class="fa-brands fa-docker"></i><span>Docker</span></div>
         <div class="tech-item cloud"><i class="fa-solid fa-cloud"></i><span>Cloud</span></div>
-        <div class="tech-item linux"><i class="fa-brands fa-linux"></i><span>Linux</span></div>
+        <div class="tech-item figma"><i class="fa-brands fa-figma"></i><span>Figma</span></div>
+        <div class="tech-item vscode"><i class="fa-solid fa-code"></i><span>VS Code</span></div>
+        <div class="tech-item devtools"><i class="fa-solid fa-bug"></i><span>Browser DevTools</span></div>
       </div>
     </div>
-    <!-- Learning -->
+
+    <!-- Currently Learning -->
     <div class="tech-card fade-up delay-4">
       <h3>Currently Learning</h3>
       <div class="tech-icons">
-        <div class="tech-item aws"><i class="fa-brands fa-aws"></i><span>AWS</span></div>
-        <div class="tech-item next"><i class="fa-brands fa-react"></i><span>Next.js</span></div>
         <div class="tech-item system"><i class="fa-solid fa-brain"></i><span>System Design</span></div>
         <div class="tech-item ai"><i class="fa-solid fa-robot"></i><span>AI Integration</span></div>
+        <div class="tech-item advanced-react"><i class="fa-brands fa-react"></i><span>Advanced React</span></div>
+        <div class="tech-item ui-animation"><i class="fa-solid fa-magic"></i><span>UI Animations</span></div>
       </div>
     </div>
   </div>
 </section>
+
+   
   <!-------->
 
   <!-------PROJECTS------->
@@ -340,7 +340,7 @@
     <!-- BRAND -->
     <div class="footer-brand">
       <h2 class="brand-name">Hanvitha Pesarikayala</h2>
-      <p class="brand-tag">Full Stack Developer</p>
+      <p class="brand-tag">Frontend Developer</p>
       <p class="brand-desc">
         Building scalable, modern web applications with clean UI and reliable backend systems.
       </p>
@@ -398,9 +398,9 @@
     <div class="footer-section">
       <h3>Services</h3>
       <ul>
-        <li><a href="#">Full Stack Web Development</a></li>
+        <li><a href="#">Frontend Web Development</a></li>
         <li><a href="#">Frontend Engineering</a></li>
-        <li><a href="#">Backend API Development</a></li>
+        <li><a href="#">AI Integration</a></li>
         <li><a href="#">UI / UX Implementation</a></li>
         <li><a href="#">Performance Optimization</a></li>
       </ul>
@@ -412,9 +412,9 @@
       <ul>
         <li><a href="#">HTML • CSS • JavaScript</a></li>
         <li><a href="#">React.js</a></li>
-        <li><a href="#">Node.js</a></li>
-        <li><a href="#">MongoDB</a></li>
-        <li><a href="#">Three.js</a></li>
+        <li><a href="#">Tailwind</a></li>
+        <li><a href="#">SQL</a></li>
+        <li><a href="#">GitHub</a></li>
       </ul>
     </div>
 
