--- a/index.html
+++ b/index.html
@@ -141,56 +141,11 @@
 <section class="index-projects" id="projects">
   <h2 class="title"><span>Projects</span></h2>
   <br>
+
   <!-- PROJECT 1 -->
   <div class="project-row animate-project slide-right">
     <div class="project-image">
-      <img src="Screenshot (177).png" alt="Food App">
-      <div class="project-actions">
-        <a href="javascript:void(0)">Live</a>
-        <a href="javascript:void(0)">GitHub</a>
-      </div>
-    </div>
-    <div class="project-content">
-      <span class="project-tag">Full Stack</span>
-      <h3>Online Food Ordering App</h3>
-      <p>
-        Complete food ordering platform with real-time menu browsing, cart, and secure checkout.
-      </p>
-      <ul>
-        <li>User authentication</li>
-        <li>Cart & order tracking</li>
-        <li>Responsive UI</li>
-      </ul>
-      <p class="project-tech">React • Node • MongoDB</p>
-    </div>
-  </div>
-  <!-- PROJECT 2 -->
-  <div class="project-row animate-project slide-right">
-    <div class="project-image">
-      <img src="https://picsum.photos/700/400?2" alt="Best Project">
-      <div class="project-actions">
-        <a href="javascript:void(0)">Live</a>
-        <a href="javascript:void(0)">GitHub</a>
-      </div>
-    </div>
-    <div class="project-content">
-      <span class="project-tag">Best Project</span>
-      <h3>Advanced Web Platform</h3>
-      <p>
-        Highly optimized web platform focused on performance, scalability, and modern UI patterns.
-      </p>
-      <ul>
-        <li>Optimized rendering</li>
-        <li>Reusable components</li>
-        <li>Scalable architecture</li>
-      </ul>
-      <p class="project-tech">Next.js • API • Tailwind</p>
-    </div>
-  </div>
-  <!-- PROJECT 3 -->
-  <div class="project-row animate-project slide-right">
-    <div class="project-image">
-      <img src="OIP.jpg" alt="Portfolio">
+      <img src="Screenshot (177).png" alt="Travel Planner UI">
       <div class="project-actions">
         <a href="javascript:void(0)">Live</a>
         <a href="javascript:void(0)">GitHub</a>
@@ -198,20 +153,93 @@
     </div>
     <div class="project-content">
       <span class="project-tag">Frontend</span>
-      <h3>Developer Portfolio</h3>
+      <h3>Interactive Travel Planner UI</h3>
       <p>
-        Personal portfolio showcasing projects, skills, and professional experience with a premium look.
+        A visually rich travel planner interface that helps users explore destinations, plan itineraries, and manage trips with smooth animations.
       </p>
       <ul>
-        <li>Dark theme UI</li>
-        <li>Clean animations</li>
-        <li>SEO optimized</li>
+        <li>Destination cards with hover animations</li>
+        <li>Day-wise itinerary planning layout</li>
+        <li>Smooth scrolling & section transitions</li>
       </ul>
       <p class="project-tech">HTML • CSS • JavaScript</p>
     </div>
   </div>
+
+  <!-- PROJECT 2 -->
+  <div class="project-row animate-project slide-right">
+    <div class="project-image">
+      <img src="https://picsum.photos/700/400?2" alt="Music Streaming UI">
+      <div class="project-actions">
+        <a href="javascript:void(0)">Live</a>
+        <a href="javascript:void(0)">GitHub</a>
+      </div>
+    </div>
+    <div class="project-content">
+      <span class="project-tag">UI / UX</span>
+      <h3>Music Streaming Web Interface</h3>
+      <p>
+        A modern music streaming UI inspired by popular platforms, designed with a clean layout, micro-interactions, and dark mode aesthetics.
+      </p>
+      <ul>
+        <li>Custom audio player interface</li>
+        <li>Playlist & album card components</li>
+        <li>Dark theme with interactive controls</li>
+      </ul>
+      <p class="project-tech">HTML • CSS • JavaScript</p>
+    </div>
+  </div>
+
+  <!-- PROJECT 3 -->
+  <div class="project-row animate-project slide-right">
+    <div class="project-image">
+      <img src="OIP.jpg" alt="Resume Builder UI">
+      <div class="project-actions">
+        <a href="javascript:void(0)">Live</a>
+        <a href="javascript:void(0)">GitHub</a>
+      </div>
+    </div>
+    <div class="project-content">
+      <span class="project-tag">Dashboard</span>
+      <h3>Smart Home Control Panel</h3>
+      <p>
+        A responsive smart home dashboard UI that allows users to control and monitor connected home devices through interactive cards.
+      </p>
+      <ul>
+        <li>Device control cards with toggle switches</li>
+        <li>Lighting & temperature control UI</li>
+        <li>Minimal and futuristic dashboard layout</li>
+      </ul>
+      <p class="project-tech">HTML • CSS • JavaScript</p>
+    </div>
+  </div>
+
+  <!-- PROJECT 4 -->
+  <div class="project-row animate-project slide-right">
+    <div class="project-image">
+      <img src="https://picsum.photos/700/400?4" alt="Resume Builder Interface">
+      <div class="project-actions">
+        <a href="javascript:void(0)">Live</a>
+        <a href="javascript:void(0)">GitHub</a>
+      </div>
+    </div>
+    <div class="project-content">
+      <span class="project-tag">Web App UI</span>
+      <h3>Online Resume Builder Interface</h3>
+      <p>
+        A dynamic resume builder UI that enables users to enter details and instantly preview a professionally formatted resume.
+      </p>
+      <ul>
+        <li>Live resume preview panel</li>
+        <li>Section-based input forms</li>
+        <li>Responsive & print-ready design</li>
+      </ul>
+      <p class="project-tech">HTML • CSS • JavaScript</p>
+    </div>
+  </div>
+
 </section>
-<!------------->
+
 
 <!----TESTINOMIALS------>
 <section class="index-testimonials">
