--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
       <!-- RIGHT -->
       <div class="about-hero-quote">
         <div class="quote-box">
-          <p>“I don’t just write code — I craft systems that scale and perform.”</p>
+          <p>“I build user interfaces that are not just functional, but intuitive and delightful.”</p>
         </div>
       </div>
     </div>
@@ -155,61 +155,178 @@
   <div class="skills-container">
 
     <!-- FRONTEND -->
-    <div class="skills-category">
-      <h3>Frontend</h3>
+    <!-- FRONTEND -->
+<div class="skills-category">
+  <h3>Frontend</h3>
 
-      <div class="skill html"><i class="fa-brands fa-html5"></i><span>HTML5</span><span class="percent" data-percent="95">0%</span><div class="bar"><div class="fill" data-level="95%"></div></div></div>
-      <div class="skill css"><i class="fa-brands fa-css3-alt"></i><span>CSS3</span><span class="percent" data-percent="90">0%</span><div class="bar"><div class="fill" data-level="90%"></div></div></div>
-      <div class="skill js"><i class="fa-brands fa-js"></i><span>JavaScript</span><span class="percent" data-percent="85">0%</span><div class="bar"><div class="fill" data-level="85%"></div></div></div>
-      <div class="skill react"><i class="fa-brands fa-react"></i><span>React</span><span class="percent" data-percent="80">0%</span><div class="bar"><div class="fill" data-level="80%"></div></div></div>
-      <div class="skill bootstrap"><i class="fa-brands fa-bootstrap"></i><span>Bootstrap</span><span class="percent" data-percent="78">0%</span><div class="bar"><div class="fill" data-level="78%"></div></div></div>
-      <div class="skill sass"><i class="fa-brands fa-sass"></i><span>SASS</span><span class="percent" data-percent="75">0%</span><div class="bar"><div class="fill" data-level="75%"></div></div></div>
-      <div class="skill responsive"><i class="fa-solid fa-mobile-screen"></i><span>Responsive Design</span><span class="percent" data-percent="90">0%</span><div class="bar"><div class="fill" data-level="90%"></div></div></div>
-      <div class="skill ux"><i class="fa-solid fa-pen-ruler"></i><span>UI / UX</span><span class="percent" data-percent="72">0%</span><div class="bar"><div class="fill" data-level="72%"></div></div></div>
-    </div>
+  <div class="skill html">
+    <i class="fa-brands fa-html5"></i>
+    <span>HTML5</span>
+    <span class="percent" data-percent="95">0%</span>
+    <div class="bar"><div class="fill" data-level="95%"></div></div>
+  </div>
 
-    <!-- BACKEND -->
-    <div class="skills-category">
-      <h3>Backend</h3>
+  <div class="skill css">
+    <i class="fa-brands fa-css3-alt"></i>
+    <span>CSS3</span>
+    <span class="percent" data-percent="90">0%</span>
+    <div class="bar"><div class="fill" data-level="90%"></div></div>
+  </div>
 
-      <div class="skill node"><i class="fa-brands fa-node-js"></i><span>Node.js</span><span class="percent" data-percent="80">0%</span><div class="bar"><div class="fill" data-level="80%"></div></div></div>
-      <div class="skill express"><i class="fa-solid fa-server"></i><span>Express.js</span><span class="percent" data-percent="78">0%</span><div class="bar"><div class="fill" data-level="78%"></div></div></div>
-      <div class="skill java"><i class="fa-brands fa-java"></i><span>Java</span><span class="percent" data-percent="75">0%</span><div class="bar"><div class="fill" data-level="75%"></div></div></div>
-      <div class="skill spring"><i class="fa-solid fa-leaf"></i><span>Spring Boot</span><span class="percent" data-percent="70">0%</span><div class="bar"><div class="fill" data-level="70%"></div></div></div>
-      <div class="skill api"><i class="fa-solid fa-plug"></i><span>REST APIs</span><span class="percent" data-percent="82">0%</span><div class="bar"><div class="fill" data-level="82%"></div></div></div>
-      <div class="skill jwt"><i class="fa-solid fa-key"></i><span>JWT</span><span class="percent" data-percent="74">0%</span><div class="bar"><div class="fill" data-level="74%"></div></div></div>
-    </div>
+  <div class="skill js">
+    <i class="fa-brands fa-js"></i>
+    <span>JavaScript</span>
+    <span class="percent" data-percent="85">0%</span>
+    <div class="bar"><div class="fill" data-level="85%"></div></div>
+  </div>
 
-    <!-- DATABASE -->
-    <div class="skills-category">
-      <h3>Database</h3>
+  <div class="skill responsive">
+    <i class="fa-solid fa-mobile-screen-button"></i>
+    <span>Responsive Design</span>
+    <span class="percent" data-percent="92">0%</span>
+    <div class="bar"><div class="fill" data-level="92%"></div></div>
+  </div>
+</div>
 
-      <div class="skill mysql"><i class="fa-solid fa-database"></i><span>MySQL</span><span class="percent" data-percent="82">0%</span><div class="bar"><div class="fill" data-level="82%"></div></div></div>
-      <div class="skill mongo"><i class="fa-solid fa-leaf"></i><span>MongoDB</span><span class="percent" data-percent="78">0%</span><div class="bar"><div class="fill" data-level="78%"></div></div></div>
-      <div class="skill db"><i class="fa-solid fa-sitemap"></i><span>DB Design</span><span class="percent" data-percent="76">0%</span><div class="bar"><div class="fill" data-level="76%"></div></div></div>
-      <div class="skill crud"><i class="fa-solid fa-repeat"></i><span>CRUD</span><span class="percent" data-percent="85">0%</span><div class="bar"><div class="fill" data-level="85%"></div></div></div>
-    </div>
+<!-- FRAMEWORKS -->
+<div class="skills-category">
+  <h3>Frameworks</h3>
 
-    <!-- TOOLS -->
-    <div class="skills-category">
-      <h3>Tools & Platforms</h3>
+  <div class="skill react">
+    <i class="fa-brands fa-react"></i>
+    <span>React</span>
+    <span class="percent" data-percent="80">0%</span>
+    <div class="bar"><div class="fill" data-level="80%"></div></div>
+  </div>
 
-      <div class="skill git"><i class="fa-brands fa-git-alt"></i><span>Git</span><span class="percent" data-percent="88">0%</span><div class="bar"><div class="fill" data-level="88%"></div></div></div>
-      <div class="skill github"><i class="fa-brands fa-github"></i><span>GitHub</span><span class="percent" data-percent="90">0%</span><div class="bar"><div class="fill" data-level="90%"></div></div></div>
-      <div class="skill docker"><i class="fa-brands fa-docker"></i><span>Docker</span><span class="percent" data-percent="70">0%</span><div class="bar"><div class="fill" data-level="70%"></div></div></div>
-      <div class="skill cloud"><i class="fa-solid fa-cloud"></i><span>Cloud</span><span class="percent" data-percent="68">0%</span><div class="bar"><div class="fill" data-level="68%"></div></div></div>
-      <div class="skill linux"><i class="fa-brands fa-linux"></i><span>Linux</span><span class="percent" data-percent="75">0%</span><div class="bar"><div class="fill" data-level="75%"></div></div></div>
-    </div>
+  <div class="skill bootstrap">
+    <i class="fa-brands fa-bootstrap"></i>
+    <span>Bootstrap</span>
+    <span class="percent" data-percent="78">0%</span>
+    <div class="bar"><div class="fill" data-level="78%"></div></div>
+  </div>
 
-    <!-- LEARNING -->
-    <div class="skills-category">
-      <h3>Currently Learning</h3>
+  <div class="skill sass">
+    <i class="fa-brands fa-sass"></i>
+    <span>SASS</span>
+    <span class="percent" data-percent="75">0%</span>
+    <div class="bar"><div class="fill" data-level="75%"></div></div>
+  </div>
 
-      <div class="skill aws"><i class="fa-brands fa-aws"></i><span>AWS</span><span class="percent" data-percent="65">0%</span><div class="bar"><div class="fill" data-level="65%"></div></div></div>
-      <div class="skill next"><i class="fa-solid fa-n"></i><span>Next.js</span><span class="percent" data-percent="60">0%</span><div class="bar"><div class="fill" data-level="60%"></div></div></div>
-      <div class="skill system"><i class="fa-solid fa-diagram-project"></i><span>System Design</span><span class="percent" data-percent="62">0%</span><div class="bar"><div class="fill" data-level="62%"></div></div></div>
-      <div class="skill ai"><i class="fa-solid fa-brain"></i><span>AI</span><span class="percent" data-percent="58">0%</span><div class="bar"><div class="fill" data-level="58%"></div></div></div>
-    </div>
+  <div class="skill tailwind">
+    <i class="fa-brands fa-tailwind"></i>
+    <span>Tailwind CSS</span>
+    <span class="percent" data-percent="82">0%</span>
+    <div class="bar"><div class="fill" data-level="82%"></div></div>
+  </div>
+</div>
+
+<!-- DATABASE -->
+<div class="skills-category">
+  <h3>Database</h3>
+
+  <div class="skill mysql">
+    <i class="fa-solid fa-database"></i>
+    <span>MySQL</span>
+    <span class="percent" data-percent="82">0%</span>
+    <div class="bar"><div class="fill" data-level="82%"></div></div>
+  </div>
+
+  <div class="skill db">
+    <i class="fa-solid fa-project-diagram"></i>
+    <span>DB Design</span>
+    <span class="percent" data-percent="76">0%</span>
+    <div class="bar"><div class="fill" data-level="76%"></div></div>
+  </div>
+
+  <div class="skill crud">
+    <i class="fa-solid fa-arrows-rotate"></i>
+    <span>CRUD</span>
+    <span class="percent" data-percent="85">0%</span>
+    <div class="bar"><div class="fill" data-level="85%"></div></div>
+  </div>
+</div>
+
+<!-- TOOLS & PLATFORMS -->
+<div class="skills-category">
+  <h3>Tools & Platforms</h3>
+
+  <div class="skill git">
+    <i class="fa-brands fa-git-alt"></i>
+    <span>Git</span>
+    <span class="percent" data-percent="88">0%</span>
+    <div class="bar"><div class="fill" data-level="88%"></div></div>
+  </div>
+
+  <div class="skill github">
+    <i class="fa-brands fa-github"></i>
+    <span>GitHub</span>
+    <span class="percent" data-percent="90">0%</span>
+    <div class="bar"><div class="fill" data-level="90%"></div></div>
+  </div>
+
+  <div class="skill cloud">
+    <i class="fa-solid fa-cloud"></i>
+    <span>Cloud</span>
+    <span class="percent" data-percent="70">0%</span>
+    <div class="bar"><div class="fill" data-level="70%"></div></div>
+  </div>
+
+  <div class="skill figma">
+    <i class="fa-brands fa-figma"></i>
+    <span>Figma</span>
+    <span class="percent" data-percent="78">0%</span>
+    <div class="bar"><div class="fill" data-level="78%"></div></div>
+  </div>
+
+  <div class="skill vscode">
+    <i class="fa-solid fa-code"></i>
+    <span>VS Code</span>
+    <span class="percent" data-percent="90">0%</span>
+    <div class="bar"><div class="fill" data-level="90%"></div></div>
+  </div>
+
+  <div class="skill devtools">
+    <i class="fa-solid fa-bug"></i>
+    <span>Browser DevTools</span>
+    <span class="percent" data-percent="85">0%</span>
+    <div class="bar"><div class="fill" data-level="85%"></div></div>
+  </div>
+</div>
+
+<!-- CURRENTLY LEARNING -->
+<div class="skills-category">
+  <h3>Currently Learning</h3>
+
+  <div class="skill system">
+    <i class="fa-solid fa-brain"></i>
+    <span>System Design</span>
+    <span class="percent" data-percent="65">0%</span>
+    <div class="bar"><div class="fill" data-level="65%"></div></div>
+  </div>
+
+  <div class="skill ai">
+    <i class="fa-solid fa-robot"></i>
+    <span>AI Integration</span>
+    <span class="percent" data-percent="60">0%</span>
+    <div class="bar"><div class="fill" data-level="60%"></div></div>
+  </div>
+
+  <div class="skill advanced-react">
+    <i class="fa-brands fa-react"></i>
+    <span>Advanced React</span>
+    <span class="percent" data-percent="62">0%</span>
+    <div class="bar"><div class="fill" data-level="62%"></div></div>
+  </div>
+
+  <div class="skill ui-animation">
+    <i class="fa-solid fa-magic"></i>
+    <span>UI Animations</span>
+    <span class="percent" data-percent="68">0%</span>
+    <div class="bar"><div class="fill" data-level="68%"></div></div>
+  </div>
+</div>
+
 
   </div>
 </section>
@@ -335,7 +452,7 @@
 <!-- ================= ABOUT PAGE END QUOTE ================= -->
 <section class="about-end-quote" id="about-end-quote">
   <p class="end-quote">
-    “I don’t just write code — I craft scalable, high-performance systems that make an impact.”
+    “Turning ideas into interactive experiences, one pixel at a time.”
   </p>
 </section>
 
