--- a/resources.html
+++ b/resources.html
@@ -244,7 +244,7 @@
 
 
 <section class="reviews-section">
-  <h2 class="title"><span>Reviews?</span></h2>
+  <h2 class="title"><span>Reviews</span></h2>
   <div class="reviews-wrapper">
     <div class="reviews-track">
       <div class="review">
