--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <span class="hero-badge">🚀 Available for Projects</span>
     <h1>
      
-     <h1 class="hero-name"><span>Hi, I’m Honey</span></h1>
+     <h1 class="hero-name"><span>Hi, I’m Hanvitha</span></h1>
     </h1>
     <p class="hero-subtitle">
       I build <span class="typing"></span>
