--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       I build <span class="typing"></span>
     </p>
     <p class="hero-desc">
-      Passionate Frontend Developer crafting modern, scalable, and visually
+      Passionate Full stack Developer crafting modern, scalable, and visually
       striking web experiences using cutting-edge technologies.
     </p>
     <div class="hero-actions">
@@ -93,7 +93,6 @@
       <div class="tech-icons">
         <div class="tech-item react"><i class="fa-brands fa-react"></i><span>React</span></div>
         <div class="tech-item bootstrap"><i class="fa-brands fa-bootstrap"></i><span>Bootstrap</span></div>
-        <div class="tech-item sass"><i class="fa-brands fa-sass"></i><span>SASS</span></div>
         <div class="tech-item tailwind"><i class="fa-brands fa-tailwind"></i><span>Tailwind CSS</span></div>
       </div>
     </div>
@@ -368,7 +367,7 @@
     <!-- BRAND -->
     <div class="footer-brand">
       <h2 class="brand-name">Hanvitha Pesarikayala</h2>
-      <p class="brand-tag">Frontend Developer</p>
+      <p class="brand-tag">Full Stack Developer</p>
       <p class="brand-desc">
         Building scalable, modern web applications with clean UI and reliable backend systems.
       </p>
@@ -426,8 +425,8 @@
     <div class="footer-section">
       <h3>Services</h3>
       <ul>
-        <li><a href="#">Frontend Web Development</a></li>
-        <li><a href="#">Frontend Engineering</a></li>
+        <li><a href="#">Full Stack Web Development</a></li>
+        <li><a href="#">Full Stack Engineering</a></li>
         <li><a href="#">AI Integration</a></li>
         <li><a href="#">UI / UX Implementation</a></li>
         <li><a href="#">Performance Optimization</a></li>
@@ -443,6 +442,7 @@
         <li><a href="#">Tailwind</a></li>
         <li><a href="#">SQL</a></li>
         <li><a href="#">GitHub</a></li>
+        <li><a href="#">Node.js</a></li>
       </ul>
     </div>
 
