--- a/resources.html
+++ b/resources.html
@@ -384,7 +384,6 @@
 
 
 
-
 <!--------FOOTER -------->
 <footer class="premium-footer">
 
@@ -394,7 +393,7 @@
     <!-- BRAND -->
     <div class="footer-brand">
       <h2 class="brand-name">Hanvitha Pesarikayala</h2>
-      <p class="brand-tag">Frontend Developer</p>
+      <p class="brand-tag">Full Stack Developer</p>
       <p class="brand-desc">
         Building scalable, modern web applications with clean UI and reliable backend systems.
       </p>
@@ -452,8 +451,8 @@
     <div class="footer-section">
       <h3>Services</h3>
       <ul>
-        <li><a href="#">Frontend Web Development</a></li>
-        <li><a href="#">Frontend Engineering</a></li>
+        <li><a href="#">Full Stack Web Development</a></li>
+        <li><a href="#">Full Stack Engineering</a></li>
         <li><a href="#">AI Integration</a></li>
         <li><a href="#">UI / UX Implementation</a></li>
         <li><a href="#">Performance Optimization</a></li>
@@ -469,6 +468,7 @@
         <li><a href="#">Tailwind</a></li>
         <li><a href="#">SQL</a></li>
         <li><a href="#">GitHub</a></li>
+        <li><a href="#">Node.js</a></li>
       </ul>
     </div>
 
