--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
       </div>
     </div>
 
+      <!-- Backend -->
+    <div class="tech-card fade-up delay-1">
+      <h3>Backend</h3>
+      <div class="tech-icons">
+        <div class="tech-item java"><i class="fa-brands fa-java"></i><span>Java</span></div>
+        <div class="tech-item node"><i class="fa-brands fa-node-js"></i><span>Node.js</span></div>
+        <div class="tech-item express"><i class="fa-solid fa-server"></i><span>Express.js</span></div>
+      </div>
+    </div>
+
     <!-- Frameworks -->
     <div class="tech-card fade-up delay-1">
       <h3>Frameworks</h3>
