--- a/about.html
+++ b/about.html
@@ -187,6 +187,43 @@
   </div>
 </div>
 
+
+
+
+
+<!-- BACKEND -->
+<div class="skills-category">
+  <h3>Backend</h3>
+  <div class="skill java">
+    <i class="fa-brands fa-java"></i>
+    <span>Java</span>
+    <span class="percent" data-percent="80">0%</span>
+    <div class="bar"><div class="fill" data-level="80%"></div></div>
+  </div>
+
+  <div class="skill node">
+    <i class="fa-brands fa-node-js"></i>
+    <span>Node.js</span>
+    <span class="percent" data-percent="75">0%</span>
+    <div class="bar"><div class="fill" data-level="75%"></div></div>
+  </div>
+
+  <div class="skill express">
+    <i class="fa-solid fa-server"></i>
+    <span>Express.js</span>
+    <span class="percent" data-percent="70">0%</span>
+    <div class="bar"><div class="fill" data-level="70%"></div></div>
+  </div>
+    <i class="fa-brands fa-bootstrap"></i>
+    <span>Bootstrap</span>
+    <span class="percent" data-percent="78">0%</span>
+    <div class="bar"><div class="fill" data-level="78%"></div></div>
+  </div>
+</div>
+
+
+
+
 <!-- FRAMEWORKS -->
 <div class="skills-category">
   <h3>Frameworks</h3>
