--- a/about.html
+++ b/about.html
@@ -154,7 +154,6 @@
   <div class="skills-container">
 
     <!-- FRONTEND -->
-    <!-- FRONTEND -->
 <div class="skills-category">
   <h3>Frontend</h3>
 
@@ -187,42 +186,31 @@
   </div>
 </div>
 
-
-
-
-
-<!-- BACKEND -->
+<!--BACKEND-->
 <div class="skills-category">
   <h3>Backend</h3>
-  <div class="skill java">
-    <i class="fa-brands fa-java"></i>
-    <span>Java</span>
+
+  <div class="skill nodejs">
+    <i class="fa-brands fa-node-js"></i>
+    <span>Node.js</span>
     <span class="percent" data-percent="80">0%</span>
     <div class="bar"><div class="fill" data-level="80%"></div></div>
   </div>
 
-  <div class="skill node">
-    <i class="fa-brands fa-node-js"></i>
-    <span>Node.js</span>
+  <div class="skill php">
+    <i class="fa-brands fa-php"></i>
+    <span>PHP</span>
     <span class="percent" data-percent="75">0%</span>
     <div class="bar"><div class="fill" data-level="75%"></div></div>
   </div>
 
-  <div class="skill express">
-    <i class="fa-solid fa-server"></i>
-    <span>Express.js</span>
-    <span class="percent" data-percent="70">0%</span>
-    <div class="bar"><div class="fill" data-level="70%"></div></div>
-  </div>
-    <i class="fa-brands fa-bootstrap"></i>
-    <span>Bootstrap</span>
-    <span class="percent" data-percent="78">0%</span>
-    <div class="bar"><div class="fill" data-level="78%"></div></div>
+  <div class="skill api">
+    <i class="fa-solid fa-plug"></i>
+    <span>REST APIs</span>
+    <span class="percent" data-percent="85">0%</span>
+    <div class="bar"><div class="fill" data-level="85%"></div></div>
   </div>
 </div>
-
-
-
 
 <!-- FRAMEWORKS -->
 <div class="skills-category">
@@ -242,12 +230,6 @@
     <div class="bar"><div class="fill" data-level="78%"></div></div>
   </div>
 
-  <div class="skill sass">
-    <i class="fa-brands fa-sass"></i>
-    <span>SASS</span>
-    <span class="percent" data-percent="75">0%</span>
-    <div class="bar"><div class="fill" data-level="75%"></div></div>
-  </div>
 
   <div class="skill tailwind">
     <i class="fa-brands fa-tailwind"></i>
